--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
 body{
-    background: red;
+    background: rgb(161, 217, 155);
+}
+.container{
+    background: #c7e9c0;
+    max-width: 600px;
+    margin: 30px auto;
+    box-shadow: 0 25px 50px rgba(161, 217, 155,0.08);
+    border-radius: 20px;
+    padding: 40px;
 }
