--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ body{
 }
 header{
     border-bottom: 1px solid #c7e9c0;
-    padding: 0 0 30px 0;
+    padding: 0 0 30px ;
 }
 main{
     padding: 35px 0;
