changed the line 56 in css file

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,6 @@ body{
     background-color: #006d2c;
     border:none;
     border-radius: 10px;
-    width:80%;
     font-size: 15px;
     padding: 15px 20px;
     margin-left: 5px;
@@ -54,7 +53,7 @@ main{
     color:#006d2c;
 }
 .weather-container{
-    display: flex;
+    position: absolute;
 }
 .emoji{
     font-size: 44px;
