--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,9 @@ main{
     color:#006d2c;
 }
 .weather-container{
-    position: absolute;
+    position: relative;
+    top: -10px;
+    left:20px;
 }
 .emoji{
     font-size: 44px;
