--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,29 @@ main{
     margin-top: 6px;
     font-size: 28px;
 }
+.weather-forecast {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+.forecast-date{
+    text-align: center;
+    color: #006d2c;
+    font-size: 16px;
+    line-height: 20px;
+    margin-bottom: 10px;
+}
+.forecast-icon{
+    font-size: 38px;
+    text-align: center;
+}
+.forecast-temperatures{
+    text-align: center;
+    color: #ffa500;
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
 a{
     color: #006d2c;
 }
