--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,12 @@ body{
     background-image: url("https://images.unsplash.com/photo-1463043254199-7a3efd782ad1?q=80&w=1469&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: rgb(161, 217, 155);
     font-family:  "Arimo", sans-serif;
 }
 .container{
     background-image: url("https://images.unsplash.com/photo-1543157145-f78c636d023d?q=80&w=1469&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-repeat: no-repeat;
     background-size: cover;
-    background-color: #c7e9c0;
     max-width: 600px;
     margin: 30px auto;
     box-shadow: 0 25px 50px rgba(161, 217, 155,0.08);
@@ -50,12 +48,12 @@ main{
     line-height: 45px;
 }
 .weather-details{
-    font-size: 15px;
+    font-size: 18px;
     line-height: 26px;
     font-weight: 600;
 }
 .weather-details strong{
-    color: #ffa500;
+    color: #86003c;
 }
 .weather-container{
      display: flex;
@@ -81,7 +79,7 @@ main{
 .forecast-date{
     text-align: center;
     color: #006d2c;
-    font-size: 16px;
+    font-size: 18px;
     line-height: 20px;
     margin-bottom: 10px;
 }
@@ -93,7 +91,7 @@ main{
 }
 .forecast-temperatures{
     text-align: center;
-    color: #ffa500;
+    color: #86003c;
     margin-top: 10px;
     display: flex;
     justify-content: center;
