--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body{
     font-family:  "Arimo", sans-serif;
 }
 .container{
-    background-image: url("https://images.unsplash.com/photo-1543157145-f78c636d023d?q=80&w=1469&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+    background-image: url("https://media.istockphoto.com/id/2156900313/photo/blank-fresh-flower-pattern-background-template.jpg?s=612x612&w=0&k=20&c=lptIJVznAX5duRlv5hnQBLukEP_ElHYrFGcJs95xFyw=");
     background-repeat: no-repeat;
     background-size: cover;
     max-width: 600px;
